<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".Auth.SignUpActivity">

    <RelativeLayout
            android:layout_width="match_parent" android:layout_height="0dp"
            android:isScrollContainer="true" android:paddingBottom="48dp"
            android:focusableInTouchMode="true" android:focusable="true">

        <ImageView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_alignParentTop="true" android:layout_alignParentStart="true"
                android:layout_marginTop="32dp" android:layout_marginStart="16dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" android:id="@+id/back_arrow"
                android:contentDescription="@string/go_back"/>

        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/signup_title" android:layout_below="@id/back_arrow"
                android:layout_alignParentStart="true" android:layout_marginTop="24dp"
                android:layout_marginStart="18dp" android:textSize="32sp"
                android:textColor="@android:color/black" android:id="@+id/txt_signup"/>

        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_below="@id/txt_signup" android:layout_alignParentStart="true"
                android:layout_marginTop="24dp" android:layout_marginStart="24dp"
                android:text="@string/name" android:textSize="24sp"
                android:id="@+id/txt_signup_name"/>

        <EditText
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="24dp" android:layout_marginTop="8dp"
                android:paddingVertical="10dp" android:layout_below="@id/txt_signup_name"
                android:id="@+id/edit_signup_name" android:hint="@string/name_hint"
                android:inputType="text"/>

        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_below="@id/edit_signup_name" android:layout_alignParentStart="true"
                android:layout_marginTop="16dp" android:layout_marginStart="24dp"
                android:text="@string/email" android:textSize="24sp"
                android:id="@+id/txt_signup_email"/>

        <EditText
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="24dp" android:layout_marginTop="8dp"
                android:paddingVertical="10dp" android:layout_below="@id/txt_signup_email"
                android:id="@+id/edit_signup_email" android:hint="@string/email_hint"
                android:inputType="textEmailAddress"/>

        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_below="@id/edit_signup_email" android:layout_alignParentStart="true"
                android:layout_marginTop="16dp" android:layout_marginStart="24dp"
                android:text="@string/password" android:textSize="24sp"
                android:id="@+id/txt_signup_password"/>

        <EditText
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="24dp" android:layout_marginTop="8dp"
                android:paddingVertical="10dp" android:layout_below="@id/txt_signup_password"
                android:id="@+id/edit_signup_password" android:inputType="textPassword"/>

        <Button
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
                android:layout_below="@id/edit_signup_password" android:layout_marginHorizontal="24dp"
                android:paddingVertical="10dp" android:layout_marginTop="48dp"
                android:textSize="18sp" android:text="@string/signup"
                android:textColor="@android:color/white" android:background="@color/colorPrimary"
                android:id="@+id/btn_signup"/>

        <ProgressBar
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/pb_signup" android:layout_centerInParent="true"
                android:visibility="invisible"/>

    </RelativeLayout>
</ScrollView>