<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".Auth.LoginActivity">
    <RelativeLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:isScrollContainer="true" android:paddingBottom="48dp"
            android:focusable="true" android:focusableInTouchMode="true">

        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/welcome" android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" android:layout_marginTop="48dp"
                android:layout_marginStart="24dp" android:textSize="48sp"
                android:textColor="@android:color/black" android:id="@+id/txt_welcome"/>

        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_below="@id/txt_welcome" android:layout_alignParentStart="true"
                android:layout_marginTop="16dp" android:layout_marginStart="24dp"
                android:text="@string/email" android:textSize="24sp"
                android:id="@+id/txt_login_email"/>

        <EditText
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="24dp" android:layout_marginTop="8dp"
                android:paddingVertical="10dp" android:layout_below="@id/txt_login_email"
                android:id="@+id/edit_login_email" android:inputType="textEmailAddress"
                android:hint="@string/email_hint"/>

        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_below="@id/edit_login_email" android:layout_alignParentStart="true"
                android:layout_marginTop="16dp" android:layout_marginStart="24dp"
                android:text="@string/password" android:textSize="24sp"
                android:id="@+id/txt_signup_password"/>

        <EditText
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="24dp" android:layout_marginTop="8dp"
                android:paddingVertical="10dp" android:layout_below="@id/txt_signup_password"
                android:id="@+id/edit_login_password" android:inputType="textPassword"/>

        <Button
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
                android:layout_below="@id/edit_login_password" android:layout_marginHorizontal="24dp"
                android:paddingVertical="10dp" android:layout_marginTop="48dp"
                android:textSize="18sp" android:text="@string/login"
                android:textColor="@android:color/white" android:background="@color/colorPrimary"
                android:id="@+id/btn_login"/>

        <Button
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_below="@id/btn_login" android:layout_marginTop="16dp"
                android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="24dp" android:background="@color/colorPrimaryDark"
                android:text="@string/signup_title" android:textSize="18sp"
                android:textColor="@android:color/white" android:paddingVertical="10dp"
                android:id="@+id/btn_login_signup"/>

        <ProgressBar
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/pb_login" android:layout_centerInParent="true"
                android:visibility="invisible"/>

    </RelativeLayout>
</ScrollView>