<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".AddGroupActivity" android:isScrollContainer="true">

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:layout_marginTop="24dp" android:layout_marginStart="24dp"
            android:text="@string/name" android:textSize="18sp"
            android:id="@+id/txt_add_group_name"/>

    <EditText
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="24dp" android:layout_marginTop="8dp"
            android:paddingVertical="10dp" android:layout_below="@id/txt_add_group_name"
            android:id="@+id/edit_add_group_name" android:inputType="text"/>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_below="@id/edit_add_group_name" android:layout_alignParentStart="true"
            android:layout_marginTop="24dp" android:layout_marginStart="24dp"
            android:text="@string/members" android:textSize="18sp"
            android:id="@+id/txt_members"/>

    <ListView
            android:layout_width="match_parent" android:layout_height="0dp"
            android:layout_above="@id/btn_add_group" android:id="@+id/lv_add_group_members"
            android:layout_marginTop="8dp" android:layout_below="@id/txt_members"/>

    <Button
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" android:layout_marginHorizontal="24dp"
            android:paddingVertical="10dp" android:layout_marginBottom="16dp"
            android:textSize="18sp" android:text="@string/add_group"
            android:textColor="@android:color/white" android:background="@color/colorPrimary"
            android:id="@+id/btn_add_group"/>

    <ProgressBar
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/pb_add_group" android:layout_centerInParent="true"
            android:visibility="invisible"/>

</RelativeLayout>